--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,39 @@
-# Dependencies
-node_modules/
+# dependencies
+node_modules
+.pnp
+.pnp.js
 
-# Next.js
+# testing
+coverage
+
+# next.js
 .next/
 out/
+build
 
-# Build artifacts
-dist/
-build/
-coverage/
+# misc
+.DS_Store
+*.pem
 
-# Logs
-*.log
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# OS files
-.DS_Store
-Thumbs.db
-
-# Env and secrets
+# local env files
 .env
-.env.*
-!.env.example
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Editor
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# editor
 .vscode/
-
-# Electron builder output
-release/
-
+.idea/
