--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,13 @@
-# dependencies
 node_modules
-.pnp
-.pnp.js
-
-# testing
-coverage
-
-# next.js
-.next/
-out/
+.next
+.env
+.env.local
+.env.*.local
+.vscode
+dist
 build
-
-# misc
 .DS_Store
-*.pem
-
-# debug
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# local env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
-# editor
-.vscode/
-.idea/
