--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,38 @@
-node_modules
+.DS_Store
+Thumbs.db
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Dependencies
+node_modules/
+
+# Next.js
+.next/
+out/
+
+# Build / tooling
+dist/
+build/
+coverage/
+.turbo/
+.vercel/
+
+# Env files (do not commit secrets)
+.env
+.env.*
+!.env.example
+
+# IDE / editor
+.vscode/
+.idea/
+*.swp
+
+# Cursor / agent artifacts
+.cursor/
+agent-tools/
