--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "WozaMali Team",
   "main": "electron/main.js",
   "scripts": {
-    "dev": "next dev -p 8081",
+    "dev": "next dev --webpack -p 8081",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
