--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": [
-        "./src/*"
+        "./src/*",
+        "./app/*"
       ],
       "@types/*": [
         "../types/*"
